# CosmoResell

./: README.md  bot.py  core.py  ebay_scraper.py  facebook_save_profile.py  fb_scraper.py  main.py  notifier.py  requirements.txt  utils.py
app/: pyproject.toml
app/src/app/: __init__.py  forms.py
app/src/app/templates/: list.html  search.html
